# Smart_card_reader

./: .gitignore  README.md  config.yaml  create_yaml_config.py  main.py  main_backup.py  pyproject.toml  requirements.txt  requirements_win.txt  strart.sh
Code_test_esp32_rc522_mini/: Code_test_esp32_rc522_mini.ino
abstract/factory/: abstract_factory.py  concrete_factory_linux.py  concrete_factory_win.py
abstract/product/: abstract_product.py  concrete_products_linux.py  concrete_products_win.py
abstract_components.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
constant/: __init__.py
manager_media_service/: config.yaml  main.py  strart.sh
manager_media_service/abstract/factory/: abstract_factory.py  concrete_factory_linux.py  concrete_factory_win.py
manager_media_service/abstract/product/: abstract_product.py  concrete_products_linux.py  concrete_products_win.py
manager_media_service/constant/: __init__.py
manager_media_service/utils/: logger.py  pattern.py
manager_serial_service/: main.py  strart.sh
manager_serial_service/abstract/factory/: abstract_factory.py  concrete_factory_linux.py  concrete_factory_win.py
manager_serial_service/abstract/product/: abstract_product.py  concrete_products_linux.py  concrete_products_win.py
manager_serial_service/constant/: __init__.py
